--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://192.168.1.158:3306/sdl-wechat?serverTimezone=GMT%2b8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/sdlwechat?serverTimezone=GMT%2b8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.thymeleaf.cache=false
