define a properties in yml and enable the references to the controller bean.

--- a/src/main/resources/application-dev01.yml
+++ b/src/main/resources/application-dev01.yml
@@ -10,6 +10,9 @@ spring:
     hibernate:
       ddl-auto: create-drop
 
+contractFile:
+    attachmentPath: /data/attachments/sdl_docs
+
 datasource.zj:
   url: jdbc:mysql://localhost:3306/sdlwechat?serverTimezone=GMT%2b8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
   username: root
