--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
     #active: dev01
     ##Switch to prod if want to run it for prod env.
     ##Or add application-xxx and set active: xxx as you will.
-    active: prod
+    active: dev02
