--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,7 @@ spring:
     ##Switch to prod if want to run it for prod env.
     ##Or add application-xxx and set active: xxx as you will.
     #active: dev02
-    active: prod
+    active: dev01
+
+
+
